--- a/connect/pom.xml
+++ b/connect/pom.xml
@@ -14,8 +14,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <commons-codec.version>1.15</commons-codec.version>
     <connect.version.old>1.6.0</connect.version.old>
+    <version.httpclient>5.3.1</version.httpclient>
     <mockito.version>1.9.5</mockito.version>
     <wiremock.version>1.58</wiremock.version>
     <maven-bundle-plugin.version>5.1.1</maven-bundle-plugin.version>
@@ -44,15 +44,9 @@
       </dependency>
 
       <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
         <version>${version.httpclient}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>${commons-codec.version}</version>
       </dependency>
 
       <dependency>
