--- a/engine-rest/pom.xml
+++ b/engine-rest/pom.xml
@@ -57,8 +57,8 @@
         <type>pom</type>
       </dependency>
       <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpcore</artifactId>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpcore5</artifactId>
         <version>${version.apache.httpcore}</version>
       </dependency>
       <dependency>
