--- a/qa/integration-tests-webapps/pom.xml
+++ b/qa/integration-tests-webapps/pom.xml
@@ -57,7 +57,7 @@
       <dependency>
         <groupId>org.apache.httpcomponents.client5</groupId>
         <artifactId>httpclient5</artifactId>
-        <version>4.5.9</version>
+        <version>${version.httpclient}</version>
       </dependency>
     
       <dependency>
