--- a/engine-rest/pom.xml
+++ b/engine-rest/pom.xml
@@ -17,7 +17,6 @@
     <version.rest-assured>4.5.0</version.rest-assured>
     <!-- override groovy version with the one used by rest-assured -->
     <version.groovy>3.0.9</version.groovy>
-    <version.apache.httpcore>4.4.5</version.apache.httpcore>
     <version.commons-codec>1.15</version.commons-codec>
   </properties>
 
@@ -59,7 +58,7 @@
       <dependency>
         <groupId>org.apache.httpcomponents.client5</groupId>
         <artifactId>httpcore5</artifactId>
-        <version>${version.apache.httpcore}</version>
+        <version>${version.httpclient}</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
