--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -495,8 +495,8 @@
               <exclude>org.mybatis:mybatis:*</exclude>
               <exclude>commons-logging:*</exclude>
               <exclude>joda-time:*</exclude>
-              <exclude>org.apache.httpcomponents:httpclient</exclude>
-              <exclude>org.apache.httpcomponents:httpcore</exclude>
+              <exclude>org.apache.httpcomponents.client5:httpclient5</exclude>
+              <exclude>org.apache.httpcomponents.core5:httpcore5</exclude>
               <exclude>commons-codec:commons-codec</exclude>
             </excludes>
           </artifactSet>
