--- a/.ci/config/matrices.yaml
+++ b/.ci/config/matrices.yaml
@@ -6,11 +6,12 @@
 engine-webapp-unit:
 # engine-webapp-unit.databases should include all supported database versions
   databases:
-  - 'postgresql_142'
-  - 'postgresql_150'
-  - 'postgresql_160'
-  - 'aws_aurora_postgresql_14'
-  - 'aws_aurora_postgresql_15'
+  #- 'postgresql_142'
+  #- 'postgresql_150'
+  #- 'postgresql_160'
+  - 'postgresql_170'
+  #- 'aws_aurora_postgresql_14'
+  #- 'aws_aurora_postgresql_15'
   - 'mariadb_106'
   - 'mysql_80'
   - 'oracle_19'
@@ -32,8 +33,8 @@ engine-rest:
 daily-stages:
   databases:
 # daily-stages.databases should include the latest version for each supported database
-  - 'postgresql_160'
-  - 'aws_aurora_postgresql_15'
+  - 'postgresql_170'
+  #- 'aws_aurora_postgresql_15'
   - 'mariadb_106'
   - 'mysql_80'
   - 'oracle_23'
